[package]
name = "libbtcwallet-demo"
version = "0.0.1"
authors = ["Matt Corallo"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightningdevkit/libbtcwallet/"
edition = "2021"

[features]

[dependencies]
bitcoin-payment-instructions = { path = "../bitcoin-payment-instructions" }
libbtcwallet = { path = "../libbtcwallet" }
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread"] }
ldk-node = { version = "0.4", default-features = false }
