[package]
name = "libbtcwallet"
version = "0.0.1"
authors = ["Matt Corallo"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightningdevkit/libbtcwallet/"
description = """
The Bitcoin Wallet Library
Implements the full backend for a modern, highly usable, Bitcoin wallet focusing on maximizing security and self-custody without trading off user experience.
"""
edition = "2021"

[package.metadata.docs.rs]
features = ["std"]
rustdoc-args = ["--cfg", "docsrs"]

[features]

[dependencies]
ldk-node = { git = "https://github.com/lightningdevkit/ldk-node", default-features = false }
bitcoin-payment-instructions = { version = "0.0.2", path = "../bitcoin-payment-instructions", features = ["http"] }
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "sync"] }
spark-rust = { version = "0.1.9" }
spark-protos = { version = "0.1.5", default-features = false }
uuid = { version = "1.0", default-features = false }

[dev-dependencies]
